[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/ui/AboutPage.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/LevelMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/buttons/about.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/buttons/about_pressed.png" type="Texture" id=4]
[ext_resource path="res://scenes/stages/Home.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/buttons/exit_pressed.png" type="Texture" id=6]
[ext_resource path="res://tres/default_theme.tres" type="Theme" id=7]
[ext_resource path="res://assets/ui/buttons/exit.png" type="Texture" id=8]

[node name="Home" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 7 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="LevelMap" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="MarginC" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxC" type="VBoxContainer" parent="MarginC"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 704.0
mouse_filter = 2
custom_constants/separation = 16
alignment = 2

[node name="About" type="TextureButton" parent="MarginC/VBoxC"]
margin_left = 1184.0
margin_top = 544.0
margin_right = 1248.0
margin_bottom = 608.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 8
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Exit" type="TextureButton" parent="MarginC/VBoxC"]
margin_left = 1184.0
margin_top = 624.0
margin_right = 1248.0
margin_bottom = 688.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 8
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="AboutPage" parent="." instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0

[connection signal="level_pressed" from="LevelMap" to="." method="_on_LevelsPanelC_level_pressed"]
[connection signal="pressed" from="MarginC/VBoxC/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="MarginC/VBoxC/Exit" to="." method="_on_Exit_pressed"]
